# enigma

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  README_8md.html  annotated.html  annotated_dup.js  brute_8c.html  brute_8c.js  brute_8h.html  brute_8h.js  brute_8h_source.html  build_webdemo.sh  classes.html  common_8h.html  common_8h.js  common_8h_source.html  config.mk  crack_8c.html  crack_8c.js  crack_8h.html  crack_8h.js  crack_8h_source.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_afa9d67d7be824863403988bd03a861d.html  dir_afa9d67d7be824863403988bd03a861d.js  enigma_8c.html  enigma_8c.js  enigma_8h.html  enigma_8h.js  enigma_8h_source.html  enigmacli_8md.html  enigmacrack_8md.html  files.html  functions.html  functions_vars.html  (+102 more)
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  clang-format.yml  cmake-single-platform.yml  demo.yml
doc/: enigmacli.md  enigmacrack.md
docs/: enigmacli.md  enigmacrack.md  genngrams.md  indexgen.md
docs/man/: CMakeLists.txt  enigmacrack.1
docs/man/man1/: enigmacli.1  enigmacrack.1  genngrams.1  indexgen.1
search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_7.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_7.js  functions_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  (+11 more)
src/: CMakeLists.txt  bombe.c  bombe.h  bombe_main.c  crack.c  crack.h  crack_main.c  defs.h  enigma.c  enigma.h  enigma_main.c  ic.c  ic.h  main.c  ngram.c  plugboard.h  reflector.h  reflectors.c  reflectors.h  rotor.c  rotor.h  rotors.c  rotors.h
src/enigma/: bombe.c  bombe.h  brute.c  brute.h  common.c  common.h  crack.c  crack.h  defs.h  enigma.c  enigma.h  hybrid.c  io.c  io.h  ioc.c  ioc.h  ngram.c  ngram.h  reflector.c  reflector.h  reflectors.c  reflectors.h  rotor.c  rotor.h  rotors.c  rotors.h  score.c  score.h  threads.c  threads.h
src/lib/: bombe.c  bombe.h  enigma.c  enigma.h  reflectors.c  reflectors.h  rotors.c  rotors.h
test/: CMakeLists.txt  test_brute.c  test_crack.c  test_enigma.c  test_io.c  test_ioc.c  test_ngram.c  test_reflector.c  test_rotor.c  test_score.c  util.c
test/data/: bigrams.txt  ngrams_invalid_first_line.txt  ngrams_invalid_n.txt  quadgrams.txt  trigrams.txt
tools/: CMakeLists.txt  bombe_main.c  crack_main.c  enigma_main.c  genngrams.sh  indexgen.py  ngram.sh
tools/enigmacrack/: repl.c  repl.h
wasm/: api.js  demo.js
webdemo/: api.js  demo.js  index.html  style.css
